Fixed overall readability

--- a/native.css
+++ b/native.css
@@ -63,10 +63,10 @@ h3 {
 }
 /* -----Landing Page ---- */
 .landing {
-  height: 70vh !important;
+  height: 60vh !important;
 }
 .home-inner {
-  background-image: url('./img/nativeapp-mockups2.jpg');
+  background-color: #31353a;
 }
 .caption {
   width: 100%;
@@ -78,6 +78,7 @@ h3 {
   text-transform: uppercase;
 }
 .caption h1 {
+  color: #faa916;
   font-size: 3.8em;
   font-weight: 700;
   letter-spacing: 0.05em;
@@ -229,10 +230,6 @@ Extra (xl) large devices (large desktops, 1200px and up)
 
 =============*/
 @media only screen and (max-width: 576px) {
-  .home-inner {
-    background-image: none;
-    background-color: #31353a;
-  }
   .landing {
     height: 60vh !important;
   }
@@ -245,7 +242,6 @@ Extra (xl) large devices (large desktops, 1200px and up)
     padding: 0.1em;
   }
   .caption h1 {
-    color: #faa916;
     font-size: 2.5em;
     font-weight: 700;
     text-shadow: 0.1rem 0.1rem 0.56em black;
